- Se añadió sobra a los botones de contacto - Animaciones sobre el hover de nav - Se mantuvo el header arriba - Animación para las secciones 	modified:   portafolio.html 	modified:   style.css

--- a/portafolio.html
+++ b/portafolio.html
@@ -15,12 +15,10 @@
         <header>
             <nav>
                 <!-- Menú principal -->
-                <div class="redireccion-menu">
                     <a href="#proyectos" class="nav-link links">Proyectos</a>
                     <a href="#formacion" class="nav-link links">Formación</a>
                     <a href="#experiencia" class="nav-link links">Experiencia</a>
-                </div>
-    
+
                 <!-- Contacto (ícono en móviles) -->
                 <div class="contacto-header">
                     <button id="contact-icon" class="contact-icon" onclick="toggleContactMenu()">
@@ -78,8 +76,11 @@
             <h1 class="texto-hero">Ronald Garbanzo Carmona</h1>
             <h2 class="texto-hero">Ingeniero de Software Front-End</h2>
             <p class="texto-hero">Costa Rica</p>
-            <p class="texto-hero">Enfocado en soluciones prácticas y diseño funcional para mejorar la
-                experiencia del usuario. Siéntete libre de contactarme para colaborar.</p>
+            <p class="texto-hero">
+                Me especializo en desarrollar soluciones prácticas y diseños funcionales 
+                que mejoran la experiencia del usuario. Estoy siempre abierto a nuevas oportunidades. 
+                Siéntete libre de contactarme.
+            </p>
         </div>
            <div class="contacto">
                 <ul class="menu-contacto">
@@ -130,7 +131,7 @@
         
         <div class="tecnologias" id="tecnologias">
             <!--HTML-->
-            <svg  class="icons-fondo-claro" width="43" height="44" viewBox="0 0 43 44" xmlns="http://www.w3.org/2000/svg">
+            <svg  class="icons-fondo-claro slide-top" width="43" height="44" viewBox="0 0 43 44" xmlns="http://www.w3.org/2000/svg">
                 <path d="M5.65688 0C3.25757 0 1.32362 1.94485 1.51279 4.16599L2.18336 12.0389C2.19751 12.2587 2.25871 12.4736 2.36337 12.6711C2.46804 12.8686 2.61406 13.0447 2.7929 13.1892C2.97175 13.3336 3.17981 13.4435 3.40492 13.5124C3.63004 13.5812 3.86768 13.6077 4.10393 13.5902C4.34019 13.5727 4.57032 13.5116 4.78085 13.4105C4.99138 13.3094 5.17809 13.1703 5.33004 13.0014C5.482 12.8325 5.59615 12.6371 5.66581 12.4267C5.73548 12.2162 5.75926 11.995 5.73577 11.776L5.0652 3.90521C5.03577 3.5597 5.28339 3.31038 5.65688 3.31038H37.3431C37.7166 3.31038 37.9642 3.5597 37.9348 3.90521L36.1018 25.4119C36.0645 25.8497 36.2161 26.2834 36.5231 26.6174C36.8301 26.9515 37.2674 27.1586 37.7387 27.1932C38.2101 27.2277 38.677 27.087 39.0366 26.8018C39.3963 26.5167 39.6193 26.1105 39.6565 25.6727L41.4872 4.16599C41.6764 1.94485 39.7424 0 37.3431 0H5.65688ZM12.0656 8.82767C11.3742 8.82767 10.8276 9.37303 10.8799 10.013L11.7709 21.0476C11.8172 21.6236 12.3353 22.0692 12.9566 22.0692H27.7834L27.2265 29.1102L21.5139 30.8085L15.9892 29.121L15.8129 26.9141C15.744 26.049 14.9693 25.3796 14.0355 25.3796C12.9984 25.3796 12.181 26.1976 12.2582 27.1576L12.5552 30.8365C12.5908 31.2812 12.9111 31.6619 13.3673 31.802L21.1218 34.1835C21.3606 34.2575 21.6174 34.2574 21.8573 34.1857L29.8369 31.8085C30.2978 31.6717 30.6227 31.2867 30.6583 30.8387L31.5261 19.9442C31.5772 19.3042 31.033 18.7588 30.3427 18.7588H15.1563L14.6342 12.1381H30.2569C31.1883 12.1381 31.9618 11.4718 32.0342 10.61C32.1126 9.64891 31.2952 8.82767 30.2569 8.82767H12.0656ZM4.58953 17.539C4.3408 17.5377 4.09453 17.5848 3.86658 17.6773C3.63863 17.7697 3.43403 17.9055 3.26597 18.0758C3.0979 18.2461 2.97007 18.4472 2.89072 18.6662C2.81136 18.8852 2.78224 19.1171 2.80521 19.3472L4.22988 36.0736C4.3584 37.5831 5.43537 38.8942 6.9725 39.4056L20.0962 43.7741C20.097 43.7741 20.0978 43.7741 20.0985 43.7741C21.0047 44.0753 21.9953 44.0753 22.9015 43.7741L36.0252 39.4056C37.5633 38.8946 38.6392 37.5837 38.7678 36.0736L39.1019 32.1555C39.1259 31.9361 39.1024 31.7145 39.0329 31.5037C38.9634 31.2929 38.8493 31.0971 38.6972 30.9278C38.5451 30.7585 38.3581 30.6192 38.1473 30.5179C37.9364 30.4167 37.7059 30.3556 37.4693 30.3382C37.2326 30.3208 36.9946 30.3475 36.7693 30.4168C36.5439 30.486 36.3357 30.5964 36.1569 30.7413C35.978 30.8863 35.8322 31.0631 35.7279 31.2611C35.6236 31.4592 35.563 31.6746 35.5495 31.8947L35.2154 35.8129C35.1966 36.033 35.0481 36.2152 34.8256 36.2892C34.8248 36.2892 34.824 36.2892 34.8233 36.2892L21.6995 40.6577C21.5697 40.7009 21.4279 40.7009 21.2981 40.6577L8.17442 36.2892C7.9519 36.2152 7.80335 36.033 7.78461 35.8129L6.35761 19.0864C6.32823 18.6686 6.12949 18.2767 5.80141 17.9895C5.47333 17.7024 5.0403 17.5414 4.58953 17.539Z" />
             </svg>
             <!--CSS-->
@@ -338,7 +339,7 @@
             </ol>
         </div>  
     </section>
-    <section class="seccion-experiencia" id="experiencia 1">
+    <section class="seccion-experiencia" id="experiencia">
         <h1 class="titulo-seccion">Experiencia</h1>
         <ol class="lista exp-1">
             <li class="item-lista">
