- Se añadio el formulario (No responsivo) 	new file:   Extras/Foto_mia.webp 	renamed:    Home-page Oscuro.png -> Extras/Home-page Oscuro.png 	renamed:    Home-page.png -> Extras/Home-page.png 	deleted:    Icono 2(gris).png 	new file:   Iconos/cerrar.svg 	modified:   portafolio.html 	modified:   script.js 	modified:   style.css

--- a/portafolio.html
+++ b/portafolio.html
@@ -1,4 +1,4 @@
-
+<!DOCTYPE html>
 <html lang="es">
     <head>
         <meta charset="UTF-8">
@@ -22,7 +22,7 @@
                 </div>
                 <!-- Contacto (ícono en móviles) -->
                 <div class="contacto-header">
-                    <button id="contact-icon" class="contact-icon" alt="Icono de Ronald" onclick="toggleContactMenu()">
+                    <button id="contact-icon" class="contact-icon" alt="Icono de Ronald">
                         <!-- Ícono de persona para móviles -->
                         <svg width="24" height="24" fill="currentColor" xmlns="http://www.w3.org/2000/svg">
                             <path d="M12 12c2.761 0 5-2.239 5-5s-2.239-5-5-5-5 2.239-5 5 2.239 5 5 5zM12 14c-4.418 0-8 3.582-8 8v1h16v-1c0-4.418-3.582-8-8-8z"/>
@@ -32,7 +32,7 @@
                     <!-- Menú de Contacto (desplegable en móviles) -->
                     <ul id="contact-menu" class="menu-contacto menu-contacto-header hidden">
                         <li class="nav-item">
-                            <a href="mailto:ronald.gc3154@gmail.com" class="boton-mail-v1" alt="Botón para enviar un correo a Ronald">
+                            <a  id="boton-formulario" class="boton-mail-v1" onclick="toggleVisibility('formulario-contacto')" alt="Botón para enviar un correo a Ronald" >
                                 <svg class="icons-fondo-claro" width="20" height="16" viewBox="0 0 20 16" fill="none" alt="Icono de un sobre">
                                     <path d="M2.30775 15.5C1.80258 15.5 1.375 15.325 1.025 14.975C0.675 14.625 0.5 14.1974 0.5 13.6923V2.30775C0.5 1.80258 0.675 1.375 1.025 1.025C1.375 0.675 1.80258 0.5 2.30775 0.5H17.6923C18.1974 0.5 18.625 0.675 18.975 1.025C19.325 1.375 19.5 1.80258 19.5 2.30775V13.6923C19.5 14.1974 19.325 14.625 18.975 14.975C18.625 15.325 18.1974 15.5 17.6923 15.5H2.30775ZM10 8.55775L2 3.44225V13.6923C2 13.7821 2.02883 13.8558 2.0865 13.9135C2.14417 13.9712 2.21792 14 2.30775 14H17.6923C17.7821 14 17.8558 13.9712 17.9135 13.9135C17.9712 13.8558 18 13.7821 18 13.6923V3.44225L10 8.55775ZM10 7L17.8463 2H2.15375L10 7ZM2 3.44225V2V13.6923C2 13.7821 2.02883 13.8558 2.0865 13.9135C2.14417 13.9712 2.21792 14 2.30775 14H2V3.44225Z"/>
                                 </svg>
@@ -72,6 +72,43 @@
             </nav>
         </header>
     </section> 
+    <div class="carta-formulario-contacto hidden" id="formulario-contacto">
+        <div class="arriba-carta">
+            <h5> Contacto</h5>
+            <svg  class="icons-fondo-oscuro icono" ="14" height="14" viewBox="0 0 14 14" fill="none" xmlns="http://www.w3.org/2000/svg">
+                <path d="M1.4 14L0 12.6L5.6 7L0 1.4L1.4 0L7 5.6L12.6 0L14 1.4L8.4 7L14 12.6L12.6 14L7 8.4L1.4 14Z"/>
+            </svg>
+        </div>
+        <div>
+            <div class="informacion-formulario ">
+                <img src="Extras/Foto_mia.webp">
+                <div class="estructura-informacion">
+                    <p class="texto-formulario">Ronald <br>Garbanzo Carmona</p>
+                    <p class="texto-formulario">ronaldgc.3154@gmail.com</p>
+                    <div class="estructura-botones">
+                        <a href="https://www.linkedin.com/in/ronaldgc/" target="_blank" class="boton-azul nav-link" alt="Botón para visitar Linkedin de Ronald">
+                            <!-- Ícono de LinkedIn -->
+                            <svg class="icons-fondo-oscuro" width="24" height="24" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
+                                <path d="M20.4491 20.4496H16.8931V14.8805C16.8931 13.5525 16.8694 11.8429 15.0436 11.8429C13.1915 11.8429 12.9081 13.2899 12.9081 14.7838V20.4492H9.35203V8.99689H12.7658V10.562H12.8136C13.1553 9.97782 13.649 9.49726 14.2421 9.17149C14.8352 8.84572 15.5056 8.68693 16.1819 8.71203C19.7861 8.71203 20.4506 11.0828 20.4506 14.167L20.4491 20.4496ZM5.33963 7.43144C4.93148 7.43151 4.53247 7.31055 4.19307 7.08385C3.85367 6.85715 3.58913 6.53489 3.43287 6.15783C3.27661 5.78077 3.23566 5.36584 3.31521 4.96551C3.39477 4.56517 3.59125 4.19743 3.8798 3.90876C4.16835 3.6201 4.53602 3.42348 4.93631 3.34378C5.3366 3.26408 5.75152 3.30488 6.12863 3.46101C6.50573 3.61713 6.82807 3.88158 7.05489 4.22091C7.2817 4.56025 7.40281 4.95922 7.40288 5.36738C7.40293 5.63839 7.34959 5.90675 7.24593 6.15715C7.14227 6.40754 6.99032 6.63507 6.79873 6.82674C6.60714 7.0184 6.37966 7.17045 6.1293 7.27421C5.87895 7.37796 5.61062 7.43139 5.33963 7.43144ZM7.11765 20.4496H3.5579V8.99689H7.11765V20.4496ZM22.222 0.00163516H1.77099C1.30681 -0.00360329 0.859518 0.175663 0.52744 0.500042C0.195362 0.824421 0.00566506 1.26737 0 1.73156V22.2681C0.00547117 22.7325 0.195057 23.1758 0.527123 23.5005C0.85919 23.8252 1.30658 24.0048 1.77099 23.9999H22.222C22.6873 24.0057 23.1359 23.8266 23.4693 23.5019C23.8027 23.1772 23.9936 22.7334 24 22.2681V1.73008C23.9934 1.26497 23.8024 0.821515 23.469 0.497144C23.1356 0.172773 22.6871 -0.00598143 22.222 0.000152822"/>
+                            </svg>
+                        </a>
+                        <a  href="" target="_blank" class="boton-azul nav-link" alt="Boton para descargar curriculum">
+                            <!--Curriculum-->
+                            <svg class="icons-fondo-oscuro" width="28" height="28" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
+                                <path d="M17 15.8173C16.2628 15.8173 15.6362 15.5592 15.1202 15.0433C14.6042 14.5273 14.3462 13.9007 14.3462 13.1635C14.3462 12.4263 14.6042 11.7998 15.1202 11.2838C15.6362 10.7678 16.2628 10.5098 17 10.5098C17.7372 10.5098 18.3638 10.7678 18.8798 11.2838C19.3958 11.7998 19.6538 12.4263 19.6538 13.1635C19.6538 13.9007 19.3958 14.5273 18.8798 15.0433C18.3638 15.5592 17.7372 15.8173 17 15.8173ZM17 14.3173C17.3218 14.3173 17.5946 14.2054 17.8182 13.9817C18.0419 13.7581 18.1538 13.4853 18.1538 13.1635C18.1538 12.8417 18.0419 12.5689 17.8182 12.3453C17.5946 12.1214 17.3218 12.0095 17 12.0095C16.6782 12.0095 16.4054 12.1214 16.1818 12.3453C15.9581 12.5689 15.8462 12.8417 15.8462 13.1635C15.8462 13.4853 15.9581 13.7581 16.1818 13.9817C16.4054 14.2054 16.6782 14.3173 17 14.3173ZM11.3463 22.2693V19.7153C11.3463 19.4257 11.4153 19.1535 11.5533 18.8985C11.6912 18.6435 11.8844 18.4402 12.1328 18.2885C12.6309 17.9913 13.1563 17.745 13.709 17.5495C14.2617 17.354 14.826 17.2093 15.402 17.1155L17 19.125L18.5885 17.1155C19.1677 17.2093 19.7312 17.354 20.279 17.5495C20.8267 17.745 21.351 17.9913 21.852 18.2885C22.1007 18.4397 22.2948 18.6423 22.4345 18.8962C22.5743 19.1501 22.6474 19.4199 22.6538 19.7057V22.2693H11.3463ZM12.8212 20.7693H16.3865L14.8348 18.7923C14.4814 18.8818 14.1379 18.998 13.8042 19.141C13.4706 19.2842 13.1429 19.4436 12.8212 19.6193V20.7693ZM17.6135 20.7693H21.1538V19.6193C20.8423 19.4333 20.5197 19.273 20.186 19.1385C19.8525 19.0038 19.5091 18.8917 19.1557 18.802L17.6135 20.7693ZM5.31225 20.5C4.81058 20.5 4.38308 20.323 4.02975 19.969C3.67658 19.615 3.5 19.1894 3.5 18.6923V5.30775C3.5 4.81058 3.677 4.385 4.031 4.031C4.385 3.677 4.81058 3.5 5.30775 3.5H18.6923C19.1894 3.5 19.615 3.677 19.969 4.031C20.323 4.385 20.5 4.81058 20.5 5.30775V9.65375C20.291 9.41658 20.0683 9.1945 19.8318 8.9875C19.5953 8.7805 19.318 8.63658 19 8.55575V5.30775C19 5.21792 18.9712 5.14417 18.9135 5.0865C18.8558 5.02883 18.7821 5 18.6923 5H5.30775C5.21792 5 5.14417 5.02883 5.0865 5.0865C5.02883 5.14417 5 5.21792 5 5.30775V18.6923C5 18.7821 5.02883 18.8558 5.0865 18.9135C5.14417 18.9712 5.21792 19 5.30775 19H9.05375C9.02308 19.1192 9 19.2384 8.9845 19.3577C8.96917 19.4769 8.9615 19.5961 8.9615 19.7153V20.5H5.31225ZM7.25 8.86525H14.4615C14.7987 8.62808 15.1631 8.45183 15.5548 8.3365C15.9464 8.22117 16.3448 8.15708 16.75 8.14425V7.3655H7.25V8.86525ZM7.25 12.75H12.0095C12.0223 12.4833 12.0583 12.2266 12.1173 11.9798C12.1763 11.7331 12.2532 11.4898 12.348 11.25H7.25V12.75ZM7.25 16.6345H10.373C10.55 16.491 10.7362 16.3593 10.9317 16.2395C11.1272 16.1195 11.3269 16.0127 11.5308 15.9192V15.1348H7.25V16.6345ZM5 19V5V8.5405V8.125V19Z" />
+                            </svg>
+                        </a>
+                    </div>
+                </div>
+            </div>
+            <form>
+                <input  type="text" id="nombre" name="persona" placeholder="Nombre">
+                <input type="email" id="mail" name="user_mail" placeholder="Correo electrónico"/>
+                <textarea type="text" id="msg" name="user_message" placeholder="Mensaje"></textarea>
+                <button class="boton-mail-v2" type="submit">Envíar</button>
+            </form>
+        </div>
+    </div>
     <section class="hero" id="hero">
         <div class="texto-hero">
             <h1 class="texto-hero">Ronald Garbanzo Carmona</h1>
