--- a/portafolio.html
+++ b/portafolio.html
@@ -30,7 +30,7 @@
                     </button>
     
                     <!-- Menú de Contacto (desplegable en móviles) -->
-                    <ul id="contact-menu" class="menu-contacto menu-contacto-header hidden show">
+                    <ul id="contact-menu" class="menu-contacto menu-contacto-header hidden">
                         <li class="nav-item">
                             <a  id="boton-formulario" class="boton-mail-v1" onclick="toggleVisibility('formulario-contacto')" alt="Botón para enviar un correo a Ronald" >
                                 <svg class="icons-fondo-claro" width="20" height="16" viewBox="0 0 20 16" fill="none" alt="Icono de un sobre">
@@ -71,17 +71,16 @@
                 </div>
             </nav>
         </header>
-    </section> 
     <div class="carta-formulario-contacto hidden" id="formulario-contacto">
         <div class="arriba-carta">
             <h5> Contacto</h5>
-            <svg  class="icons-fondo-oscuro icono" ="14" height="14" viewBox="0 0 14 14" fill="none" xmlns="http://www.w3.org/2000/svg">
+            <svg   onclick="toggleVisibility('formulario-contacto')" class="icons-fondo-oscuro icono" ="14" height="14" viewBox="0 0 14 14" fill="none" xmlns="http://www.w3.org/2000/svg">
                 <path d="M1.4 14L0 12.6L5.6 7L0 1.4L1.4 0L7 5.6L12.6 0L14 1.4L8.4 7L14 12.6L12.6 14L7 8.4L1.4 14Z"/>
             </svg>
         </div>
         <div>
             <div class="informacion-formulario ">
-                <img src="Extras/Foto_mia.webp">
+                <img src="Extras/Foto_mia.png">
                 <div class="estructura-informacion">
                     <p class="texto-formulario">Ronald <br>Garbanzo Carmona</p>
                     <p class="texto-formulario">ronaldgc.3154@gmail.com</p>
@@ -407,8 +406,8 @@
         <div class="contacto">
             <ul class="menu-contacto">
                 <li class="nav-item"> 
-                    <a href="mailto:ronald.gc3154@gmail.com" class="letra-boton boton-mail-v1 ">
-                        <svg class="icons-fondo-claro" width="20" height="16" viewBox="0 0 20 16" fill="none">
+                    <a  id="boton-formulario" class="boton-mail-v1" onclick="toggleVisibility('formulario-contacto')" alt="Botón para enviar un correo a Ronald" >
+                        <svg class="icons-fondo-claro" width="20" height="16" viewBox="0 0 20 16" fill="none" alt="Icono de un sobre">
                             <path d="M2.30775 15.5C1.80258 15.5 1.375 15.325 1.025 14.975C0.675 14.625 0.5 14.1974 0.5 13.6923V2.30775C0.5 1.80258 0.675 1.375 1.025 1.025C1.375 0.675 1.80258 0.5 2.30775 0.5H17.6923C18.1974 0.5 18.625 0.675 18.975 1.025C19.325 1.375 19.5 1.80258 19.5 2.30775V13.6923C19.5 14.1974 19.325 14.625 18.975 14.975C18.625 15.325 18.1974 15.5 17.6923 15.5H2.30775ZM10 8.55775L2 3.44225V13.6923C2 13.7821 2.02883 13.8558 2.0865 13.9135C2.14417 13.9712 2.21792 14 2.30775 14H17.6923C17.7821 14 17.8558 13.9712 17.9135 13.9135C17.9712 13.8558 18 13.7821 18 13.6923V3.44225L10 8.55775ZM10 7L17.8463 2H2.15375L10 7ZM2 3.44225V2V13.6923C2 13.7821 2.02883 13.8558 2.0865 13.9135C2.14417 13.9712 2.21792 14 2.30775 14H2V3.44225Z"/>
                         </svg>
                         Contacta conmigo
