- Nuevas cartas para mostrar proyectos - Se cambio el tamaño del os svg en mobile 	new file:   Extras/fondo-img-proyectos.png 	modified:   portafolio.html 	modified:   style.css

--- a/portafolio.html
+++ b/portafolio.html
@@ -166,7 +166,7 @@
             <h1 class="titulo-seccion">Proyectos</h1> 
         </div>
         
-        <div class="tecnologias" id="tecnologias" se>
+        <div class="tecnologias" id="tecnologias" >
             <!--HTML-->
             <svg class="icons-fondo-claro slide-top" width="43" height="44" viewBox="0 0 43 44" xmlns="http://www.w3.org/2000/svg">
                 <path d="M5.65688 0C3.25757 0 1.32362 1.94485 1.51279 4.16599L2.18336 12.0389C2.19751 12.2587 2.25871 12.4736 2.36337 12.6711C2.46804 12.8686 2.61406 13.0447 2.7929 13.1892C2.97175 13.3336 3.17981 13.4435 3.40492 13.5124C3.63004 13.5812 3.86768 13.6077 4.10393 13.5902C4.34019 13.5727 4.57032 13.5116 4.78085 13.4105C4.99138 13.3094 5.17809 13.1703 5.33004 13.0014C5.482 12.8325 5.59615 12.6371 5.66581 12.4267C5.73548 12.2162 5.75926 11.995 5.73577 11.776L5.0652 3.90521C5.03577 3.5597 5.28339 3.31038 5.65688 3.31038H37.3431C37.7166 3.31038 37.9642 3.5597 37.9348 3.90521L36.1018 25.4119C36.0645 25.8497 36.2161 26.2834 36.5231 26.6174C36.8301 26.9515 37.2674 27.1586 37.7387 27.1932C38.2101 27.2277 38.677 27.087 39.0366 26.8018C39.3963 26.5167 39.6193 26.1105 39.6565 25.6727L41.4872 4.16599C41.6764 1.94485 39.7424 0 37.3431 0H5.65688ZM12.0656 8.82767C11.3742 8.82767 10.8276 9.37303 10.8799 10.013L11.7709 21.0476C11.8172 21.6236 12.3353 22.0692 12.9566 22.0692H27.7834L27.2265 29.1102L21.5139 30.8085L15.9892 29.121L15.8129 26.9141C15.744 26.049 14.9693 25.3796 14.0355 25.3796C12.9984 25.3796 12.181 26.1976 12.2582 27.1576L12.5552 30.8365C12.5908 31.2812 12.9111 31.6619 13.3673 31.802L21.1218 34.1835C21.3606 34.2575 21.6174 34.2574 21.8573 34.1857L29.8369 31.8085C30.2978 31.6717 30.6227 31.2867 30.6583 30.8387L31.5261 19.9442C31.5772 19.3042 31.033 18.7588 30.3427 18.7588H15.1563L14.6342 12.1381H30.2569C31.1883 12.1381 31.9618 11.4718 32.0342 10.61C32.1126 9.64891 31.2952 8.82767 30.2569 8.82767H12.0656ZM4.58953 17.539C4.3408 17.5377 4.09453 17.5848 3.86658 17.6773C3.63863 17.7697 3.43403 17.9055 3.26597 18.0758C3.0979 18.2461 2.97007 18.4472 2.89072 18.6662C2.81136 18.8852 2.78224 19.1171 2.80521 19.3472L4.22988 36.0736C4.3584 37.5831 5.43537 38.8942 6.9725 39.4056L20.0962 43.7741C20.097 43.7741 20.0978 43.7741 20.0985 43.7741C21.0047 44.0753 21.9953 44.0753 22.9015 43.7741L36.0252 39.4056C37.5633 38.8946 38.6392 37.5837 38.7678 36.0736L39.1019 32.1555C39.1259 31.9361 39.1024 31.7145 39.0329 31.5037C38.9634 31.2929 38.8493 31.0971 38.6972 30.9278C38.5451 30.7585 38.3581 30.6192 38.1473 30.5179C37.9364 30.4167 37.7059 30.3556 37.4693 30.3382C37.2326 30.3208 36.9946 30.3475 36.7693 30.4168C36.5439 30.486 36.3357 30.5964 36.1569 30.7413C35.978 30.8863 35.8322 31.0631 35.7279 31.2611C35.6236 31.4592 35.563 31.6746 35.5495 31.8947L35.2154 35.8129C35.1966 36.033 35.0481 36.2152 34.8256 36.2892C34.8248 36.2892 34.824 36.2892 34.8233 36.2892L21.6995 40.6577C21.5697 40.7009 21.4279 40.7009 21.2981 40.6577L8.17442 36.2892C7.9519 36.2152 7.80335 36.033 7.78461 35.8129L6.35761 19.0864C6.32823 18.6686 6.12949 18.2767 5.80141 17.9895C5.47333 17.7024 5.0403 17.5414 4.58953 17.539Z" />
@@ -233,29 +233,52 @@
                 </defs>
             </svg>  
             <!--SQL-->
-            <svg class="icons-fondo-claro" width="43" height="42" viewBox="0 0 43 42" fill="none" xmlns="http://www.w3.org/2000/svg">
+            <svg class="icons-fondo-claro icon-tecnologias" width="43" height="42" viewBox="0 0 43 42" fill="none" xmlns="http://www.w3.org/2000/svg">
                 <path d="M10.1875 22.75H13.2745C13.7575 22.75 14.1495 23.1437 14.1495 23.625C14.1495 24.108 14.5415 24.5 15.0245 24.5C15.5075 24.5 15.8995 24.108 15.8995 23.625C15.8995 22.1777 14.7218 21 13.2745 21H10.1875C8.51279 21 7.14954 22.3633 7.14954 24.038C7.14954 25.1948 7.79179 26.236 8.82779 26.7557L13.4355 29.0587C13.8765 29.2792 14.1495 29.7203 14.1495 30.212C14.1495 30.9225 13.572 31.5 12.8615 31.5H9.77454C9.29154 31.5 8.89954 31.1062 8.89954 30.625C8.89954 30.142 8.50754 29.75 8.02454 29.75C7.54154 29.75 7.14954 30.142 7.14954 30.625C7.14954 32.0723 8.32729 33.25 9.77454 33.25H12.8615C14.5363 33.25 15.8995 31.8868 15.8995 30.212C15.8995 29.0553 15.2573 28.014 14.2213 27.4943L9.61354 25.1913C9.17254 24.9708 8.89954 24.5298 8.89954 24.038C8.89954 23.3275 9.47704 22.75 10.1875 22.75Z" />
                 <path d="M29.8995 31.5V21.875C29.8995 21.392 29.5075 21 29.0245 21C28.5415 21 28.1495 21.392 28.1495 21.875V32.375C28.1495 32.858 28.5415 33.25 29.0245 33.25H36.0245C36.5075 33.25 36.8995 32.858 36.8995 32.375C36.8995 31.892 36.5075 31.5 36.0245 31.5H29.8995Z" fill="none"/>
                 <path d="M22.0245 21C19.613 21 17.6495 22.9618 17.6495 25.375V28.875C17.6495 31.2882 19.613 33.25 22.0245 33.25C22.9153 33.25 23.7413 32.9805 24.4343 32.522L24.9068 32.9945C25.0765 33.1643 25.3005 33.25 25.5245 33.25C25.7485 33.25 25.9725 33.1643 26.144 32.9945C26.4853 32.6532 26.4853 32.0985 26.144 31.7572L25.6715 31.2848C26.13 30.5918 26.3995 29.7657 26.3995 28.875V25.375C26.3995 22.9618 24.436 21 22.0245 21ZM23.9425 29.5557C23.6013 29.2145 23.0465 29.2145 22.7053 29.5557C22.364 29.897 22.364 30.4518 22.7053 30.793L23.1498 31.2375C22.8068 31.4003 22.4288 31.5 22.0245 31.5C20.5773 31.5 19.3995 30.3223 19.3995 28.875V25.375C19.3995 23.9277 20.5773 22.75 22.0245 22.75C23.4718 22.75 24.6495 23.9277 24.6495 25.375V28.875C24.6495 29.2793 24.5498 29.6572 24.387 30.0002L23.9425 29.5557Z" />
                 <path d="M40.3995 18.375C40.3995 17.892 40.0075 17.5 39.5245 17.5H36.8995V2.625C36.8995 2.142 36.5075 1.75 36.0245 1.75H16.7745C16.736 1.75 16.701 1.7675 16.6625 1.77275C16.624 1.778 16.589 1.78325 16.5523 1.79375C16.4053 1.834 16.2653 1.897 16.155 2.0055L7.40504 10.7555C7.29654 10.8658 7.23354 11.0058 7.19329 11.1528C7.18279 11.1912 7.17579 11.2245 7.17229 11.263C7.16704 11.3015 7.14954 11.3365 7.14954 11.375V17.5H4.52454C4.04154 17.5 3.64954 17.892 3.64954 18.375V35.875C3.64954 36.358 4.04154 36.75 4.52454 36.75H7.14954V41.125C7.14954 41.608 7.54154 42 8.02454 42H36.0245C36.5075 42 36.8995 41.608 36.8995 41.125V36.75H39.5245C40.0075 36.75 40.3995 36.358 40.3995 35.875V18.375ZM15.8995 4.73725V10.5H10.1368L15.8995 4.73725ZM8.89954 12.25H16.7745C17.2575 12.25 17.6495 11.858 17.6495 11.375V3.5H35.1495V17.5H8.89954V12.25ZM35.1495 40.25H8.89954V36.75H35.1495V40.25ZM38.6495 35H5.39954V19.25H38.6495V35Z" />
             </svg>
         </div>
-        <section class="seccion-cartas-proyectos">
-            <div class="carta-proyecto">
-                <img class="img-proyecto" src="fondo-img-proyectos.png"></img>
-                <h5 class="titulo-proyecto texto-proyecto">Título del proyecto</h5>
-                <p class="descripcion-proyecto texto-proyecto">Descripción del proyecto</p>
-            </div>
-            <div class="carta-proyecto">
-                <img class="img-proyecto" src="fondo-img-proyectos.png"></img>
-                <h5 class="titulo-proyecto texto-proyecto">Título del proyecto</h5>
-                <p class="descripcion-proyecto texto-proyecto">Descripción del proyecto</p>
-            </div>
-            <div class="carta-proyecto">
-                <img class="img-proyecto" src="fondo-img-proyectos.png"></img>
-                <h5 class="titulo-proyecto texto-proyecto">Título del proyecto</h5>
-                <p class="descripcion-proyecto texto-proyecto">Descripción del proyecto</p>
-            </div>
+        <ul id="cards" >
+            <li class="card" id="card_1">
+                <div class="carta-proyecto">
+                    <div>
+                        <img class="img-proyecto" src="/Extras/fondo-img-proyectos.png"></img>
+                    </div>
+                    <div class="informacion-proyecto">
+                        <h3 class="titulo-proyecto texto-proyecto">Título del proyecto</h3>
+                        <p class="descripcion-proyecto texto-proyecto">Descripción del proyecto</p>
+                        <div class="tecnologias" id="tecnologias" ></div>
+                        <a class="link-proyecto texto-proyecto links">link.proyecto</a>
+                    </div>
+                </div>
+            </li>
+            <li class="card" id="card_2">
+                <div class="carta-proyecto">
+                    <figure>
+                        <img class="img-proyecto" src="/Extras/fondo-img-proyectos.png"></img>
+                    </figure>
+                    <div class="informacion-proyecto">
+                        <h3 class="titulo-proyecto texto-proyecto">Título del proyecto</h3>
+                        <p class="descripcion-proyecto texto-proyecto">Descripción del proyecto</p>
+                        <div class="tecnologias" id="tecnologias" ></div>
+                        <a class="link-proyecto texto-proyecto links">link.proyecto</a>
+                    </div>
+                </div>
+            </li>
+            <li class="card" id="card_3">
+                <div class="carta-proyecto">
+                    <div>
+                        <img class="img-proyecto" src="/Extras/fondo-img-proyectos.png"></img>
+                    </div>
+                    <div class="informacion-proyecto">
+                        <h3 class="titulo-proyecto texto-proyecto">Título del proyecto</h3>
+                        <p class="descripcion-proyecto texto-proyecto">Descripción del proyecto</p>
+                        <a class="link-proyecto texto-proyecto links">link.proyecto</a>
+                    </div>
+                </div>
+            </li>
         </section>
     </section>
     <section class="seccion-formacion" id="formacion">
